# Nondeterministic_TM

./: CMakeLists.txt  Makefile  main.c  program_helper.h  program_parser.c  program_parser.h  readme.md  simulator.c  simulator.h  simulator_helper.c  simulator_helper.h  tape_helper.h  tape_parser.c  tape_parser.h
examples/: nichtdet_sort_3.delta  nichtdet_sort_3.tape  nichtdet_sort_5.delta  nichtdet_sort_5.tape  test_prog.txt  test_tape.txt
